<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Usuarios"
    tools:showIn="@layout/app_bar_usuarios"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="10dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TV_Nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Name"
                android:textColor="#1a1946"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/ET_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Name"/>

            <TextView
                android:id="@+id/TV_Email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/Email"
                android:textColor="#1a1946"
                android:textSize="15sp"/>

            <EditText
                android:id="@+id/ET_Email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Email"/>

            <TextView
                android:id="@+id/TV_Password_NA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:text="@string/Password"
                android:textColor="#1a1946"
                android:textSize="15sp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/ET_id_Password_NA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:maxLines="1" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/BTN_Iniciar_Sesion_NA"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="bottom|center"
                android:layout_marginTop="20dp"
                android:background="@drawable/bk_boton_plano"
                android:gravity="center"
                android:onClick="onClick"
                android:stateListAnimator="@null"
                android:text="@string/Login_BTN"
                android:textAlignment="center"
                android:textColor="#1a1946"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>